# svgdatagrabber

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: release-drafter.yml
.github/workflows/: pages.yml  pypi.yml  pytest.yaml  pytest.yml  release-drafter.yml
docs/: Makefile  conf.py  index.md  requirements.txt
examples/: praai2013.ipynb
examples/results/: tau-sign.csv  u-sign.csv  w-sign.csv  w-u.csv
svgdatagrabber/: SvgPathParser.py  __init__.py  csys.py  filters.py  geometry.py  parser.py  paths.py  version.py
svgdatagrabber/filters/: __init__.py  doctest.py  filterbase.py  rectangle.py  specialline.py
svgdatagrabber/geometry/: __init__.py  arc.py  bezier.py  circle.py  closedshape.py  doctest.py  ellipse.py  geometrybase.py  line.py  linebase.py  path.py  point.py  pointsequence.py  polygon.py  quadrilateral.py  sequence.py  straightline.py  triangle.py
svgdatagrabber/graphics/: __main__.py  annotations.py  geometricobject.py  graphicsview.py  gui.py  mainwindow.py
tests/: conftest.py  test_geometry.py  test_getdata.py
